# Apk

./: build.gradle  codemagic.yaml  gradle.properties  settings.gradle
app/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml  MainActivity.java  activity_main.xml
app/src/main/cpp/: Bot.h  CMakeLists.txt  GameEngine.h  main.cpp
app/src/main/cpp/core/: MathUtils.h  Shader.h
app/src/main/cpp/game/: Entity.h  EntityManager.h  GameObject.h  Map.h  Player.h  WeaponSystem.h
app/src/main/java/com/derbmaroc/battle/: MainActivity.java
app/src/main/res/drawable/: styles.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
